nova (1:2014.1~b1+master-0ubuntu1) UNRELEASED; urgency=low

  [ Chuck Short ]
  * debian/patches/fix-libvirt-regression.patch: Dropped.
  * debian/patches/sqlachemy-0.8.3-compat.patch: Refreshed.
  * debian/control: Add python-pycadf as ad dependency.

  [ James Page ]
  * d/nova-compute-*.conf: Update default hypervisor configurations
    to use new libvirt section configuration. 
  * d/control: Bump version for stevedore to >= 0.12.
  * d/p/*: Refreshed.

 -- Chuck Short <zulcss@ubuntu.com>  Thu, 05 Dec 2013 15:08:16 -0500

nova (1:2014.1~b1-0ubuntu2) trusty; urgency=low

  * d/nova-compute.postinst.in: rename to nova-compute.postinst
    as libvirtd detection is no longer done in d/rules.

 -- James Page <james.page@ubuntu.com>  Wed, 11 Dec 2013 09:38:18 +0000

nova (1:2014.1~b1-0ubuntu1) trusty; urgency=low

  * New upstream release.
  * debian/control:
    - Open icehouse release.
    - Bump the versioned dependencies of python-pbr, python-migrate,
      and python-six.
    - Add "X-Python-Version:"
  * Dropped xcp support (LP: #1197386) (LP: #1199791):
    - debian/patches/path-to-the-xenhost.conf-fixup.patch: Removed
    - debian/control: Removed nova-compute-xcp, nova-xcp-plugins,
      and nova-xcp-network.
  * debian/patches/fix-boto-versioning.patch: Dropped no longer needed.
  * debian/patches/native-lxc-hypervisor.patch: Dropped.
  * Simplified debian/rules:
    - Remove git vcs, its not being used by anyone, complain if you are.
    - Removed libvirtd detection, no need for it so drop it.
    - Simplify building required docs including mangpages.
    - Add OSLO_VERSION to set correct distro version for package build.
  * debian/patches/sqlachemy-0.8.3-compat.patch: Add support for
    sqlachemy 0.8.3.
  * debian/patches/avoid-failing-test.patch: Dropped.
  * debian/patches/skip_ipv6_test.patch: Skip ipv6 test.
  * debian/patches/fix-libvirt-regression.patch: Fix libvirt regression
    while running the tests.
