@@ -1,3 +1,5 @@
+diff --git a/requirements.txt b/requirements.txt
+index de6d606..fb99aa3 100644
 --- a/requirements.txt
 +++ b/requirements.txt
 @@ -1,5 +1,5 @@
@@ -7,6 +9,15 @@
  amqplib>=0.6.1
  anyjson>=0.3.3
  argparse
+@@ -9,7 +9,7 @@ Jinja2
+ kombu>=2.4.8
+ lxml>=2.3
+ Routes>=1.12.3
+-WebOb>=1.2.3,<1.3
++WebOb>=1.2.3,<=1.3
+ greenlet>=0.3.2
+ PasteDeploy>=1.5.0
+ Paste
 @@ -27,6 +27,5 @@ python-glanceclient>=0.9.0
  python-keystoneclient>=0.4.1
  six>=1.4.1
@@ -14,3 +25,4 @@
 -websockify>=0.5.1,<0.6
  oslo.config>=1.2.0
  pycadf>=0.1.9
+
