@@ -3,7 +3,8 @@ nova (1:2014.1~b1+master-0ubuntu1) UNRELEASED; urgency=low
   [ Chuck Short ]
   * debian/patches/fix-libvirt-regression.patch: Dropped.
   * debian/patches/sqlachemy-0.8.3-compat.patch: Refreshed.
-  * debian/control: Add python-pycadf as ad dependency.
+  * debian/control: Add python-pycadf as a dependency.
+  * debian/patches/fix-requirements.patch: Refreshed
 
   [ James Page ]
   * d/nova-compute-*.conf: Update default hypervisor configurations
